--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,11 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+você filter=lfs diff=lfs merge=lfs -text
+Ou filter=lfs diff=lfs merge=lfs -text
+o filter=lfs diff=lfs merge=lfs -text
+que filter=lfs diff=lfs merge=lfs -text
+vídeo filter=lfs diff=lfs merge=lfs -text
+está filter=lfs diff=lfs merge=lfs -text
+utilizando filter=lfs diff=lfs merge=lfs -text
+\# filter=lfs diff=lfs merge=lfs -text
+formato filter=lfs diff=lfs merge=lfs -text
+de filter=lfs diff=lfs merge=lfs -text
