--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "image-webpack-loader": "^8.1.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "purgecss": "^7.0.2",
     "purify-css": "^1.2.5",
     "tailwindcss": "^3.4.15",
