--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.13.1",
+    "instafeed.js": "^2.0.0",
     "keen-slider": "^6.8.6",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.462.0",
